2001-11-18  Max Horn  <max@quendi.de>

	* audio/midi_drivers/mac_midi.cc: fixed crash on exit when music is disabled

2001-11-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: remove check for zutil.h
	* configure.in: link dynamically against zlib

2001-11-18 Ryan Nunn <triforce@merlin.net.au>
	* actors.cc, gamewin.*, gamerend.cc, objs/chunks.* : Ice Dungeons
	* audio/Audio.cc : can_sfx() also looks for Midi SFX, if compiled
	* files/zip/zip.c : Removed dependency on zutil.h

2001-11-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: fixed broken test on non-MacOSX platforms
	
2001-11-17  Max Horn  <max@quendi.de>

	* Makefile.am, configure.in: made sure MacOS X specific Makefile changes
	are really only used on MacOS X

2001-11-16  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Animated_egg_object): Remove poison/sleep field
	after one use.
	* usecode/ucinternal.cc:  Add_party_items doesn't drop things on
	ground for BG.

2001-11-17  Tristan Tarrant <nadir@users.sourceforge.net>
	* data/sfx_icon.shp: sfx icon from SB-X
	* audio/Audio.*: added can_sfx() method
	* exultmenu.cc: show sfx icons next to menu entries

2001-11-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* imagewin.cc: typo

2001-11-15  Tristan Tarrant <nadir@users.sourceforge.net>
	* exult.cc: search for data file under the executable's directory too

2001-11-14  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (public): Avoid standing while in Sit_schedule.

2001-11-13  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc (Usecode_function): A ShapeID needed to
	have shapefile set.  Fixes BG multi-race animation scenes.

2001-11-12  Tristan Tarrant <nadir@users.sourceforge.net>
	* NEWS: updated
	* acinclude.m4, config.guess, config.sub, missing, mkinstalldirs,
	install-sh, ltconfig: removed generated files once and for all

2001-11-11  Christian Ohm  <chr.ohm@gmx.net>