@@ -15,7 +15,7 @@ Package=<4>
     Project_Dep_Name Exult
     End Project Dependency
     Begin Project Dependency
-    Project_Dep_Name Exult Tools
+    Project_Dep_Name Exult_Tools
     End Project Dependency
     Begin Project Dependency
     Project_Dep_Name Flexes
@@ -48,7 +48,7 @@ Package=<4>
 
 ###############################################################################
 
-Project: "Exult Tools"=".\Exult Tools.dsp" - Package Owner=<4>
+Project: "Exult_Tools"=".\Exult_Tools.dsp" - Package Owner=<4>
 
 Package=<5>
 {{{
@@ -175,18 +175,6 @@ Package=<4>
 ###############################################################################
 
 Project: "expack"=.\expack.dsp - Package Owner=<4>
-
-Package=<5>
-{{{
-}}}
-
-Package=<4>
-{{{
-}}}
-
-###############################################################################
-
-Project: "expack_zip"=.\expack_zip.dsp - Package Owner=<4>
 
 Package=<5>
 {{{
